Fix truncation of dropdown in table

--- a/app/styles/components/_forms.scss
+++ b/app/styles/components/_forms.scss
@@ -202,6 +202,29 @@ select {
     }
 }
 
+.input-in-table {
+  .new-select select {
+    padding: 3px 35px 3px 10px;
+    border-radius: 0;
+  }
+  .input-group-btn {
+    .btn.btn-sm {
+      min-height: 32px;
+      line-height: 32px;
+      padding: 0 10px;
+    }
+  }
+  &.input-group {
+    input[inputmode="numeric"] {
+      padding: 3px 10px;
+    }
+  }
+  .btn.btn-sm {
+    min-height: 32px;
+    line-height: 32px;
+    padding: 0 8px;
+  }
+}
 
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
